# frida-gadget-zygisk

./: README.md  module.prop  post-fs-data.sh  service.sh
.github/workflows/: build.yml
libs/: frida-gadget.config
src/: CMakeLists.txt  main.cpp  zygisk.hpp
